--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,9 @@
     <string name="MenuOpcion1">Información</string>
     <string name="centroMedico">Centro Medico</string>
     <string name="pronto">Más pronto</string>
+    <string name="title_activity_menu_principal">menu_principal</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
 </resources>
